Main heading left alignment fixed

--- a/productswebpage/src/components/Main/Main.css
+++ b/productswebpage/src/components/Main/Main.css
@@ -106,3 +106,7 @@ color: #FFFFFF;
     overflow: visible;
     /* background-image: url('./../../assets/EllipseSmall.png'); */
 }
+
+.main-heading-h1{
+    text-align: left;
+}
